minor changes, added destroy to item

--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -1,2 +1,11 @@
 *
+
 !.gitignore
+!items/basketball.png
+!items/calculator.jpg
+!items/headset.jpg
+!items/keyboard.jpeg
+!items/lab-kit.jpg
+!items/laptop.jpg
+!items/projector.png
+!items/volleyball.jpg
